<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            style="@style/BorderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:tint="@android:color/black"
            android:src="@drawable/close_icon"
            android:onClick="onCloseButtonClick"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_search_text"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"/>

        <Button
            style="@style/BorderlessButton"
            android:id="@+id/search_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/done"
            android:onClick="onDoneButtonClick"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/search_current_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingVertical="20dp"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"
        android:textSize="@dimen/text_size_body"
        android:textColor="@android:color/black"
        android:textAlignment="viewStart"
        android:fontFamily="sans-serif-light"
        android:text="@string/current_location"
        android:textAllCaps="false"
        android:drawableStart="@drawable/my_location_icon"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="10dp"
        android:onClick="onCurrentLocationButtonClick"/>
</LinearLayout>